# FiapAutoKraft

./: README.md
Console-ComputationalVision/: ARCHITECTURE.md  README.md  __init__.py  main.py  pyproject.toml  python_commands.ipynb  requirements.txt
Console-ComputationalVision/app/: __init__.py  container.py  main.py
Console-ComputationalVision/application/: gcode_connection.py  home_machine.py  list_cameras.py  list_models.py  poll_current_position.py  send_coordinates.py  send_raw_command.py  start_detection.py  types.py  update_settings.py
Console-ComputationalVision/console_computational_vision/: main.py
Console-ComputationalVision/crosscutting/: __init__.py  config.py  logging_setup.py
Console-ComputationalVision/data/: repositories.py
Console-ComputationalVision/dependency_injector/: __init__.py  containers.py  providers.py
Console-ComputationalVision/domain/: entities.py
Console-ComputationalVision/gui/: MainPage.py
Console-ComputationalVision/infrastructure/: config_loader.py  grbl_sender.py  model_store.py  opencv_camera.py  yolovX_detector.py
Console-ComputationalVision/keras_models/: keras_model.h5
Console-ComputationalVision/presentation/: gui_app.py
Console-ComputationalVision/pydantic/: __init__.py
Console-ComputationalVision/pydantic_settings/: __init__.py
Console-ComputationalVision/services/: GCodeSender.py  GrblSender.py  GuiServices.py  Utils.py  integration_service.py  use_cases.py  vision_service.py
Console-ComputationalVision/shared/: logging_utils.py  paths.py  scheduling.py  ui_controls.py  validation.py
(+3683 files in other folders)
